--- a/html/signup.html
+++ b/html/signup.html
@@ -1,65 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Insert title here</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../css/signup.css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="align-items-center">
-        <form id="signup-form" class="border p-3">
-            <div class="d-flex justify-content-between">
-                <div id="left-side" class="me-5">
-                    <div class="d-flex align-items-center mb-3">
-                        <span class="me-2">역할</span>
-                        <select class="form-select w-auto">
-                            <option value="">일반사용자</option>
-                            <option value="">개발자</option>
-                            <option value="">관리자</option>
+    <div id="signup-container">
+        <span>SRM 시스템 회원가입</span>
+        <form method="post" action="${pageContext.request.contextPath}/signup">
+            <div class="d-flex">
+                <div id="left-side">
+                    <div class="select-div">
+                        <label>역할</label>
+                        <select class="form-select">
+                            <option selected>선택</option>
+                            <option>일반사용자</option>
+                            <option>개발자</option>
+                            <option>관리자</option>
                         </select>
                     </div>
-                    <div class="d-flex align-items-center mb-3">
-                        <span class="me-2">역할2</span>
-                        <select class="form-select w-auto">
-                            <option value="">팀장</option>                    
-                            <option value="">팀원</option>
+                    <div class="select-div">
+                        <label>역할2</label>
+                        <select class="form-select">
+                            <option selected>선택</option>
+                            <option>팀장</option>
+                            <option>팀원</option>
                         </select>
                     </div>
-                    <div class="d-flex align-items-center mb-3">
-                        <span class="me-2">부서</span>
-                        <select class="form-select w-auto">
-                            <option value="">개발 1팀</option>                    
-                            <option value="">개발 1팀</option>                    
-                            <option value="">개발 3팀</option>
-                            <option value="">개발 4팀</option>
-                        <select>
+                    <div class="select-div">
+                        <label>부서</label>
+                        <select class="form-select">
+                            <option selected>선택</option>
+                            <option>부서1</option>
+                            <option>부서2</option>
+                            <option>부서3</option>
+                        </select>
                     </div>
-             </div>
->                <!-- Right side (성명, 아이디, 비밀번호) -->
+                </div>
                 <div id="right-side">
-                    <div class="mb-2">
-                        <span>성명</span><input class="form-control" placeholder="성명을 입력해주세요">
+                    <div class="input-div">
+                        <label>이름</label>
+                        <input type="text" name="mem-name" placeholder="이름을 입력해 주세요." required>
                     </div>
-                    <div class="mb-2">
-                        <span>아이디</span><input class="form-control" placeholder="아이디를 입력해주세요">
+                    <div class="input-div">
+                        <label>아이디</label>
+                        <input type="text" name="mem-id" placeholder="ID를 입력해 주세요." required>
                     </div>
-                    <div class="mb-2">
-                        <span>비밀번호</span><input class="form-control" placeholder="PW를 입력해주세요">
+                    <div class="input-div">
+                        <label>비밀번호</label>
+                        <input type="text" name="mem-pw" placeholder="PW를 입력해 주세요." required>
                     </div>
-                    <div class="mb-2">
-                        <span>비밀번호 확인</span><input class="form-control" placeholder="PW를 다시 입력해주세요">
+                    <div class="input-div">
+                        <label>비밀번호 확인</label>
+                        <input type="text" name="mem-pw-confirm" placeholder="PW를 다시 입력해 주세요." required>
                     </div>
                 </div>
             </div>
-            
-            <!-- 가입요청 버튼 중앙 정렬 -->
-            <div class="text-center mt-3">
-                <button type="button" class="btn btn-sm btn-primary">가입요청</button>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-sm btn-signup">가입신청</button>
             </div>
         </form>
     </div>
 </body>
+
 </html>
