--- a/html/signup.html
+++ b/html/signup.html
@@ -6,6 +6,7 @@
     <title>Insert title here</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="../css/signup.css" rel="stylesheet">
 </head>
 
@@ -17,28 +18,28 @@
                 <div id="left-side">
                     <div class="select-div">
                         <label>역할</label>
-                        <select class="form-select">
-                            <option selected>선택</option>
-                            <option>일반사용자</option>
-                            <option>개발자</option>
-                            <option>관리자</option>
+                        <select id="role1" class="form-select">
+                            <option>선택</option>
+                            <option value="일반사용자">일반사용자</option>
+                            <option value="개발자">개발자</option>
+                            <option value="관리자">관리자</option>
                         </select>
                     </div>
                     <div class="select-div">
                         <label>역할2</label>
-                        <select class="form-select">
+                        <select id="role2" class="form-select" disabled>
                             <option selected>선택</option>
-                            <option>팀장</option>
-                            <option>팀원</option>
+                            <option value="팀장">팀장</option>
+                            <option value="팀원">팀원</option>
                         </select>
                     </div>
                     <div class="select-div">
                         <label>부서</label>
                         <select class="form-select">
                             <option selected>선택</option>
-                            <option>부서1</option>
-                            <option>부서2</option>
-                            <option>부서3</option>
+                            <option value="부서1">부서1</option>
+                            <option value="부서2">부서2</option>
+                            <option value="부서3">부서3</option>
                         </select>
                     </div>
                 </div>
@@ -66,6 +67,15 @@
             </div>
         </form>
     </div>
+    <script>
+        $(document).on('change', '#role1', function(){
+            if($(this).val() == '개발자'){
+                $('#role2').removeAttr('disabled');
+            } else {
+                $('#role2').attr('disabled', true);
+            }
+        });
+    </script>
 </body>
 
 </html>
