--- a/html/login.html
+++ b/html/login.html
@@ -23,6 +23,7 @@
 
         <div class="btn">
             <button type="submit" id="btn-signup">회원가입</button>
+            <div class="line">|</div>
             <button type="submit" id="btn-search">아이디 & 비밀번호 찾기</button>
         </div>
     </div>
