Update: "대충 틀 생성"

--- a/html/main.html
+++ b/html/main.html
@@ -12,7 +12,14 @@
 
 <body>
     <div id="header">
-        헤더
+        <div id="mem-info">
+            <sapn>정준범(개발자)</sapn> <button class="btn">로그아웃</button>
+        </div>
+        <div id="category-buttons">
+            <a class="btn category-button">MyPortal</a>
+            <a class="btn category-button">SR 관리</a>
+            <a class="btn category-button">회원 관리</a>
+        </div>
     </div>
     <div id="container" class="d-flex">
         <div id="left-side">
@@ -28,7 +35,15 @@
             </div>
             <div id="chart-container">
                 <div id="chart-box">
-                    표 들어갈 자리
+                    <div id="title-area">
+                        <h5 class="ms-4">표 제목</h5>
+                    </div>
+                    <div id="chart-area">
+                        표
+                    </div>
+                    <div id="pagenation-area">
+                        <button class="btn btn-sm btn-primary">1</button>
+                    </div>
                 </div>
             </div>
         </div>
