--- a/html/UserMyportal.html
+++ b/html/UserMyportal.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="../css/main copy.css" rel="stylesheet">
+    <link href="../css/UserMyportal.css" rel="stylesheet">
 </head>
 
 <body>
