--- a/html/UserMyportal.html
+++ b/html/UserMyportal.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="../css/UserMyportal.css" rel="stylesheet">
+    <link href="../css/userMyportal.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,17 +32,28 @@
     <div id="container" class="d-flex">
         <div id="left-side">
             <div id="category-box" class="sidebar"> 
-                <h2>My portal</h2>
-            <nav>
-                <ul>
-                    <li><a href="#">나의 할 일</a></li>
-                </ul>
-                <h3>게시판</h3>
-                <ul>
-                    <li><a href="#">공지사항</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
-            </nav>
+                <div class="myportal">
+                    <div class="hrcss">
+                        <h2 class="h2line">My portal</h2><hr>
+                    </div>
+                    <div class="myportal-menu">
+                        <img src="../images/clipboard.png">
+                        <span class="myportal-span">나의 할 일</span>
+                        <img src="../images/rightIcon.png" class="myportal-rightIcon">
+                    </div>
+                </div>
+
+                <div class="board">
+                    <div class="hrcss">
+                        <h2 class="h2line">게시판</h2><hr>
+                    </div>
+                    <div class="board-menu">
+                        <img src="../images/book-half.png">
+                        <span class="board-span">공지사항</span>
+                        <img src="../images/rightIcon.png" class="board-rightIcon">
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div id="main-content">
