--- a/html/UserMyportal.html
+++ b/html/UserMyportal.html
@@ -14,11 +14,11 @@
     <div class="navbar ms-4 me-4">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" width="30" height="30" class="d-inline-block align-text-top">
             SRM 시스템
           </a>
-          <div class="ms-auto">
-              <span class="me-3">정준범(개발자)</span> <a class=" btn me-2">로그아웃</a>
+          <div class="d-flex ms-auto">
+              <span id="mem-info" class="me-3">정준범(개발자)</span> <a class=" btn me-2">로그아웃</a>
           </div>
         </div>
     </div>
