Fix: "뭔가 수정함"

--- a/html/UserMyportal.html
+++ b/html/UserMyportal.html
@@ -24,9 +24,9 @@
     </div>
     <div class="ms-4">
         <nav class="nav">
-            <a class="nav-link category active" data-bs-toggle="tab" aria-current="page" href="#">MyPortal</a>
-            <a class="nav-link category" data-bs-toggle="tab" href="#">SR관리</a>
-            <a class="nav-link category" data-bs-toggle="tab" href="#">회원관리</a>
+            <a class="nav-link category-tab active" data-bs-toggle="tab" aria-current="page" href="#">MyPortal</a>
+            <a class="nav-link category-tab" data-bs-toggle="tab" href="#">SR관리</a>
+            <a class="nav-link category-tab" data-bs-toggle="tab" href="#">회원관리</a>
         </nav>
     </div>
     <div id="container" class="d-flex">
@@ -85,7 +85,7 @@
                             </li>
                           </ul>
                     </div>
-                    <table>
+                    <table id="task-table">
                         <thead>
                             <tr>
                                 <th>요청 번호</th>
@@ -103,7 +103,7 @@
                         <tbody>
                             <tr>
                                 <td>SR1008_001</td>
-                                <td>화면 기능 수정해주세요ddddddddddddddddddddddd.</td>
+                                <td>화면 기능 수정해주세요.</td>
                                 <td>고용 보험</td>
                                 <td>이민성</td>
                                 <td>고용노동부</td>
@@ -140,6 +140,28 @@
 
                         </tbody>
                     </table>
+                    <div id="pagenation">
+                        <a class="btn page-btn shadow-sm">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
+                            </svg>
+                        </a>
+                        <a class="btn page-btn shadow-sm">1</a>
+                        <a class="btn page-btn shadow-sm">2</a>
+                        <a class="btn page-btn shadow-sm">3</a>
+                        <a class="btn page-btn shadow-sm">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                            </svg>
+                        </a>
+                        <select class="row-select form-select">
+                            <option value="10">10</option>
+                            <option value="20">20</option>
+                            <option value="30">30</option>
+                            <option value="40">40</option>
+                            <option value="50">50</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
