--- a/html/UserMyportal.html
+++ b/html/UserMyportal.html
@@ -146,7 +146,7 @@
                             <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
                             </svg>
                         </a>
-                        <a class="btn page-btn shadow-sm">1</a>
+                        <a class="btn page-btn shadow-sm active">1</a>
                         <a class="btn page-btn shadow-sm">2</a>
                         <a class="btn page-btn shadow-sm">3</a>
                         <a class="btn page-btn shadow-sm">
