--- a/html/srmgmt.html
+++ b/html/srmgmt.html
@@ -7,43 +7,203 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../css/srmgmt.css" rel="stylesheet">
+    <link href="../css/side-bar.css" rel="stylesheet">
+    <link href="../css/userMyportal.css" rel="stylesheet">
+
     <link href="../css/reset.css" rel="stylesheet">
 
     <title>SR 관리</title>
 </head>
 
 <body>
-
-    <div id="nav-tab" class="nav flex-column" >
-        <div class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true" id="sr-mgmt">SR 관리</a>
-            <hr class="navbar-vertical-divider" id="sr-hr">
-        </div>
-
-        <a class="nav-link" id="sr-request" href="#">
-            <svg id="chart" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7"/>
-                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
-                <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
-              </svg>SR 요청 접수
-            <svg id="chevron" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
-                class="bi bi-chevron-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708" />
-            </svg>
-        </a>
-        <a class="nav-link" id="sr-prg" href="#">
-            <svg id="chart" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-data-fill" viewBox="0 0 16 16">
-                <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z"/>
-                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5zM10 8a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1"/>
-              </svg>SR 진척 조회
-            <svg id="chevron" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
-                class="bi bi-chevron-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                    d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708" />
-            </svg>
-        </a>
+    <!-- 헤더 -->
+    <div id="header" class="navbar bg-primary">
+        헤더
     </div>
+
+    <!-- 상단 nav -->
+    <div id="nav" class="navbar bg-primary-subtle">
+        <!-- 상단 네비게이션바 내용 추가 -->
+        네브
+    </div>
+
+    <!-- 좌측 내용 -->
+    <div class="flex-grow-1 m-2 ">
+        <div class="row">
+            <!-- 왼쪽 사이드바 -->
+            <div id="side-bar" class="col-md-2">
+                <div class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true" id="sr-mgmt">SR 관리</a>
+                    <hr class="navbar-vertical-divider" id="sr-hr">
+                </div>
+                <a class="nav-link" id="sr-request" href="#">
+                    <svg id="chart" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-clipboard-plus" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7" />
+                        <path
+                            d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z" />
+                        <path
+                            d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z" />
+                    </svg>SR 요청 접수
+                    <svg id="chevron" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                        class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708" />
+                    </svg>
+                </a>
+                <a class="nav-link" id="sr-prg" href="#">
+                    <svg id="chart" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-clipboard-data-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5z" />
+                        <path
+                            d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5zM10 8a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0zm-6 4a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm4-3a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1" />
+                    </svg>SR 진척 조회
+                    <svg id="chevron" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                        class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708" />
+                    </svg>
+                </a>
+            </div>
+            <!-- 오른쪽 내용 -->
+            <div class="col-md-10 bg-info-subtle">
+                <!-- 검색 영역 -->
+                <div id="search" class="bg-warning">
+                    <!-- 검색 관련 요소 -->
+                    검색
+                </div>
+
+                <!-- SR 요청 목록 -->
+                <div id="sr-list" class="bg-success">
+                    <!-- 목록 테이블 -->
+                    요청목록
+                    <div id="main-content">
+
+                        <div id="chart-container">
+                            <div id="chart-box" class="task-list">
+                                <div class="task-line">
+                                    <h2>나의 할 일</h2>
+                                </div>
+                                <div class="tabs-container">
+                                    <ul class="nav nav-tabs">
+                                        <li class="nav-item">
+                                            <a class="nav-link tb-tab active" data-bs-toggle="tab" href="#">요청<span
+                                                    class="row-cnt">(0)</span></a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link tb-tab" data-bs-toggle="tab" href="#">등록<span
+                                                    class="row-cnt">(0)</span></a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link tb-tab" data-bs-toggle="tab" href="#">반려/재검토<span
+                                                    class="row-cnt">(0)</span></a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link tb-tab" data-bs-toggle="tab" href="#">접수<span
+                                                    class="row-cnt">(0)</span></a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link tb-tab" data-bs-toggle="tab" href="#">개발중<span
+                                                    class="row-cnt">(0)</span></a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link tb-tab" data-bs-toggle="tab" href="#">개발완료<span
+                                                    class="row-cnt">(0)</span></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <table id="task-table">
+                                    <thead>
+                                        <tr>
+                                            <th>요청 번호</th>
+                                            <th>제목</th>
+                                            <th>관련 시스템</th>
+                                            <th>등록자</th>
+                                            <th>소속</th>
+                                            <th>개발부서</th>
+                                            <th>상태</th>
+                                            <th>요청일</th>
+                                            <th>완료(예정)일</th>
+                                            <th>상세보기</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>SR1008_001</td>
+                                            <td>화면 기능 수정해주세요.</td>
+                                            <td>고용 보험</td>
+                                            <td>이민성</td>
+                                            <td>고용노동부</td>
+                                            <td>서비스 개발 2팀</td>
+                                            <td>반려</td>
+                                            <td>24/10/09</td>
+                                            <td>24/10/16</td>
+                                            <td><button class="detail-btn">요청 상세</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>SR1008_001</td>
+                                            <td>화면 기능 수정해주세요.</td>
+                                            <td>고용 보험</td>
+                                            <td>이민성</td>
+                                            <td>고용노동부</td>
+                                            <td>서비스 개발 2팀</td>
+                                            <td>반려</td>
+                                            <td>24/10/09</td>
+                                            <td>24/10/16</td>
+                                            <td><button class="detail-btn">요청 상세</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>SR1008_001</td>
+                                            <td>화면 기능 수정해주세요.</td>
+                                            <td>고용 보험</td>
+                                            <td>이민성</td>
+                                            <td>고용노동부</td>
+                                            <td>서비스 개발 2팀</td>
+                                            <td>반려</td>
+                                            <td>24/10/09</td>
+                                            <td>24/10/16</td>
+                                            <td><button class="detail-btn">요청 상세</button></td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                                <div id="pagenation">
+                                    <a class="btn page-btn shadow-sm">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                            fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
+                                        </svg>
+                                    </a>
+                                    <a class="btn page-btn shadow-sm">1</a>
+                                    <a class="btn page-btn shadow-sm">2</a>
+                                    <a class="btn page-btn shadow-sm">3</a>
+                                    <a class="btn page-btn shadow-sm">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                            fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708" />
+                                        </svg>
+                                    </a>
+                                    <select class="row-select form-select">
+                                        <option value="10">10</option>
+                                        <option value="20">20</option>
+                                        <option value="30">30</option>
+                                        <option value="40">40</option>
+                                        <option value="50">50</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
