--- a/html/hrmodal.html
+++ b/html/hrmodal.html
@@ -6,6 +6,7 @@
     <title>Insert title here</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="../css/hrmodal.css" rel="stylesheet">
 </head>
 
@@ -19,14 +20,16 @@
     <div class="modal modal-lg fade" id="exampleModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <span class="moale-title">담당자 검색</span>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="modal-header ps-3">
+                    <span class="modal-title">담당자 검색</span>
+                    <button id="close-btn" type="button" data-bs-dismiss="modal">
+                        <i class="bi bi-x-square"></i>
+                    </button>
                 </div>
-                <div class="modal-body">
-                    <div id="search-box" class="d-flex justify-content-between align-items-center ps-5">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <label for="hr-select" class="me-3">소속</label>
+                <div class="modal-body p-3">
+                    <div id="search-box" class="d-flex justify-content-between align-items-center">
+                        <div id="dept-select" class="d-flex justify-content-center align-items-center">
+                            <label for="hr-select" class="me-3">부서</label>
                             <select class="hr-select form-select">
                                 <option>선택</option>
                                 <option value="서비스 개발 1팀">서비스 개발 1팀</option>
@@ -34,48 +37,48 @@
                                 <option value="서비스 개발 3팀">서비스 개발 3팀</option>
                             </select>
                         </div>
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div id="name-search" class="d-flex justify-content-center align-items-center">
                             <label for="hr-input" class="me-3">담당자 명</label>
                             <input type="text" class="hr-input form-control">
                         </div>
-                        <button class="btn btn-sm me-3 search-btn">검색</button>
+                        <button class="btn btn-sm search-btn">검색</button>
                     </div>
-                    <span class="moale-title">조회 결과</span>
+                    <span class="modal-title ms-2">조회 결과</span>
                     <table id="task-table">
                         <thead>
                             <tr>
-                                <th>
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <th class="col-1">
+                                    <input class="form-check-input" type="checkbox" value="">
                                 </th>
-                                <th>부서</th>
-                                <th>역할</th>
-                                <th>직원명</th>
+                                <th class="col-2">부서</th>
+                                <th class="col-3">역할</th>
+                                <th class="col-4">직원명</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <td class="col-1">
+                                    <input class="form-check-input" type="checkbox" value="">
                                 </td>
-                                <td>서비스 개발 1팀</td>
-                                <td>개발자</td>
-                                <td>이민성</td>
+                                <td class="col-2">서비스 개발 1팀</td>
+                                <td class="col-3">개발자</td>
+                                <td class="col-4">이민성</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <td class="col-1">
+                                    <input class="form-check-input" type="checkbox" value="">
                                 </td>
-                                <td>서비스 개발 1팀</td>
-                                <td>개발자</td>
-                                <td>이민성</td>
+                                <td class="col-2">서비스 개발 1팀</td>
+                                <td class="col-3">개발자</td>
+                                <td class="col-4">이민성</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <td class="col-1">
+                                    <input class="form-check-input" type="checkbox" value="">
                                 </td>
-                                <td>서비스 개발 1팀</td>
-                                <td>개발자</td>
-                                <td>이민성</td>
+                                <td class="col-2">서비스 개발 1팀</td>
+                                <td class="col-3">개발자</td>
+                                <td class="col-4">이민성</td>
                             </tr>
                         </tbody>
                     </table>
