--- a/html/srRegist.html
+++ b/html/srRegist.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="../css/srRegist.css" rel="stylesheet">
 
 </head>
@@ -25,13 +24,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <p class="modal-title" id="exampleModalLabel">개발계획입력</p>
-                <button id="btn-close" type="button" class="btn-close" data-bs-dismiss="modal"
-                    aria-label="Close"></button>
+                <button id="close-btn" type="button" data-bs-dismiss="modal">
+                    <i class="bi bi-x-square"></i>
+                </button>
             </div>
             <div class="modal-body">
                 <div class="container-fluid">
                     <div class="row">
-
                         <div class="col-md-6">
                             <div>
                                 <label for="registrant">등록자</label>
@@ -89,20 +88,24 @@
 
                         <div class="form-row">
                             <label for="sr-content">SR 내용</label>
-                            <textarea id="sr-content" name="sr-content"></textarea>
+                            <textarea id="sr-content" name="sr-content">
+    1. 목적:
+
+    2. 개선 내용:
+    
+    3. 고려 사항:
+                            </textarea>
                         </div>
 
                         <div class="form-row">
                             <label for="attachment">첨부파일</label>
                             <input type="file" id="attachment" name="attachment">
                         </div>
-
-
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button id="save-btn" type="button" class="btn btn-primary">저장</button>
             </div>
         </div>
     </div>
