--- a/html/srmanagement.html
+++ b/html/srmanagement.html
@@ -25,8 +25,8 @@
     </div>
     <div class="ms-4">
         <nav class="nav">
-            <a class="nav-link category active" aria-current="page" href="#">MyPortal</a>
-            <a class="nav-link category" href="#">SR관리</a>
+            <a class="nav-link category" aria-current="page" href="#">MyPortal</a>
+            <a class="nav-link category active" href="#">SR관리</a>
             <a class="nav-link category" href="#">회원관리</a>
         </nav>
     </div>
