💄 Update: "SR 등록, 상세보기 CSS 적용"

--- a/html/srRegist.html
+++ b/html/srRegist.html
@@ -52,8 +52,8 @@
                                 <input type="text" id="department" name="department">
                             </div>
                             <div class="form-row">
-                                <label for="related-system">관련 시스템</label>
-                                <input type="text" id="related-system" name="related-system">
+                                <label for="sr-status">요청 상태</label>
+                                <input type="text" id="sr-status" placeholder="요청" name="related-system" disabled>
                             </div>
                             <div class="form-row">
                                 <label for="completion-date">완료(예정)일</label>
