Fix: "회원가입 화면 수정"

--- a/html/signup.html
+++ b/html/signup.html
@@ -44,14 +44,6 @@
                         </select>
                     </div>
                     <div class="select-div">
-                        <label>역할2</label>
-                        <select id="role2" class="form-select" disabled>
-                            <option selected>선택</option>
-                            <option value="팀장">팀장</option>
-                            <option value="팀원">팀원</option>
-                        </select>
-                    </div>
-                    <div class="select-div">
                         <label>부서</label>
                         <select class="form-select">
                             <option selected>선택</option>
@@ -67,7 +59,7 @@
             </div>
         </form>
     </div>
-    <script>
+<!--     <script>
         $(document).on('change', '#role1', function(){
             if($(this).val() == '개발자'){
                 $('#role2').removeAttr('disabled');
@@ -75,7 +67,7 @@
                 $('#role2').attr('disabled', true);
             }
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
