Update: "SR요청페이지 Modal 추가"

--- a/html/srList.html
+++ b/html/srList.html
@@ -114,7 +114,7 @@
                                 <input type="text" id="input-style">
                             </li>
                             <div class="btn-box">
-                                <button id="search-btn" class="detail-btn search-btn">검색</button>
+                                <button id="search-btn" class="search-btn">검색</button>
                             </div>
                         </ul>
                     </div>
@@ -153,85 +153,9 @@
                                 <td class="col-8">등록</td>
                                 <td class="col-9">2024.10.22</td>
                                 <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
-                            </tr>
-                            <tr>
-                                <td class="col-1">1</td>
-                                <td class="col-2">SR_0001</td>
-                                <td class="col-3">이런저런거 수정 부탁드립니다.</td>
-                                <td class="col-4">고용보험</td>
-                                <td class="col-5">정준범</td>
-                                <td class="col-6">오티아이</td>
-                                <td class="col-7">개발1팀</td>
-                                <td class="col-8">등록</td>
-                                <td class="col-9">2024.10.22</td>
-                                <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
-                            </tr>
-                            <tr>
-                                <td class="col-1">1</td>
-                                <td class="col-2">SR_0001</td>
-                                <td class="col-3">이런저런거 수정 부탁드립니다.</td>
-                                <td class="col-4">고용보험</td>
-                                <td class="col-5">정준범</td>
-                                <td class="col-6">오티아이</td>
-                                <td class="col-7">개발1팀</td>
-                                <td class="col-8">등록</td>
-                                <td class="col-9">2024.10.22</td>
-                                <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
-                            </tr>
-                            <tr>
-                                <td class="col-1">1</td>
-                                <td class="col-2">SR_0001</td>
-                                <td class="col-3">이런저런거 수정 부탁드립니다.</td>
-                                <td class="col-4">고용보험</td>
-                                <td class="col-5">정준범</td>
-                                <td class="col-6">오티아이</td>
-                                <td class="col-7">개발1팀</td>
-                                <td class="col-8">등록</td>
-                                <td class="col-9">2024.10.22</td>
-                                <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
-                            </tr>
-                            <tr>
-                                <td class="col-1">1</td>
-                                <td class="col-2">SR_0001</td>
-                                <td class="col-3">이런저런거 수정 부탁드립니다.</td>
-                                <td class="col-4">고용보험</td>
-                                <td class="col-5">정준범</td>
-                                <td class="col-6">오티아이</td>
-                                <td class="col-7">개발1팀</td>
-                                <td class="col-8">등록</td>
-                                <td class="col-9">2024.10.22</td>
-                                <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
-                            </tr>
-                            <tr>
-                                <td class="col-1">1</td>
-                                <td class="col-2">SR_0001</td>
-                                <td class="col-3">이런저런거 수정 부탁드립니다.</td>
-                                <td class="col-4">고용보험</td>
-                                <td class="col-5">정준범</td>
-                                <td class="col-6">오티아이</td>
-                                <td class="col-7">개발1팀</td>
-                                <td class="col-8">등록</td>
-                                <td class="col-9">2024.10.22</td>
-                                <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
-                            </tr>
-                            <tr>
-                                <td class="col-1">1</td>
-                                <td class="col-2">SR_0001</td>
-                                <td class="col-3">이런저런거 수정 부탁드립니다.</td>
-                                <td class="col-4">고용보험</td>
-                                <td class="col-5">정준범</td>
-                                <td class="col-6">오티아이</td>
-                                <td class="col-7">개발1팀</td>
-                                <td class="col-8">등록</td>
-                                <td class="col-9">2024.10.22</td>
-                                <td class="col-10">2024.10.30</td>
-                                <td class="col-11">버튼</td>
+                                <td class="col-11">
+                                    <button class="detail-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">상세보기</button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
@@ -258,8 +182,93 @@
                         <option value="50">50</option>
                     </select>
                 </div>
+
             </div>
         </div>
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <p class="modal-title" id="exampleModalLabel">요청 상세</p>
+                            <button class="close-btn ms-auto" type="button" data-bs-dismiss="modal">
+                                <i class="bi bi-x-square"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <form>
+
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div>
+                                                <label for="registrant">등록자</label>
+                                                <input type="text" id="registrant" placeholder="이민성" disabled>
+                                            </div>
+                                            <div>
+                                                <label for="registration-date">등록일</label>
+                                                <input type="date" id="registration-date" name="registration-date" placeholder="2024.10.01" disabled>
+                                            </div>
+                                            <div class="form-row">
+                                                <label for="completion-date">요청일</label>
+                                                <input type="date" id="completion-date" name="completion-date" placeholder="2024.10.01" disabled>
+                                            </div>
+
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-row">
+                                                <label for="department">부서</label>
+                                                <input type="text" id="department" name="department"  placeholder="고용노동부" disabled>
+                                            </div>
+                                            <div class="form-row">
+                                                <label for="sr-status">요청 상태</label>
+                                                <input type="text" id="sr-status" name="related-system" placeholder="요청"disabled>
+                                            </div>
+                                            <div class="form-row">
+                                                <label for="completion-date">완료(예정)일</label>
+                                                <input type="date" id="completion-date" name="completion-date" placeholder="2024.10.01" disabled>
+                                            </div>
+                                        </div>
+
+                                        <div>
+                                            <div class="form-row">
+                                                <label for="sr-title">SR 제목</label>
+                                            <input type=" text" id="sr-title" name="related-system" placeholder="고용 24 화면 개선" disabled>
+                                            </div>
+
+                                            <div class="form-row">
+                                                <label for="related-system">관련 시스템</label>
+                                                <input type="text" id="related-system" name="related-system" placeholder="고용 보험"disabled>
+                                            </div>
+
+                                            <div class="form-row">
+                                                <label for="sr-content">SR 내용</label>
+                                                <textarea id="sr-content" name="sr-content" disabled>
+    1. 목적:
+
+    2. 개선 내용:
+    
+    3. 고려 사항:
+                                            </textarea>
+                                            </div>
+
+                                            <div class="form-row">
+                                                <label for="attachment">첨부파일</label>
+                                                <input type="file" id="attachment" name="attachment" disabled>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button id="save-btn" type="button" class="btn btn-primary">처리</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
     </div>
 
 </body>
