Fix: "모달 관련 수정"

--- a/html/hrmodal.html
+++ b/html/hrmodal.html
@@ -17,7 +17,8 @@
     </button>
   
     <!-- Modal -->
-    <div class="modal modal-lg fade" id="exampleModal" tabindex="-1" aria-hidden="true">
+    <div class="modal modal-lg fade" id="exampleModal" tabindex="-1" aria-hidden="true"
+    aria-labelledby="staticBackdropLabel" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header ps-3">
