--- a/html/srList.html
+++ b/html/srList.html
@@ -149,7 +149,7 @@
                                 <td class="col-9">2024.10.22</td>
                                 <td class="col-10">2024.10.30</td>
                                 <td class="col-11">
-                                    <button class="detail-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">상세보기</button>
+                                    <button class="detail-btn" data-bs-toggle="modal" data-bs-target="#detail-modal">상세보기</button>
                                 </td>
                             </tr>
                         </tbody>
@@ -181,8 +181,8 @@
             </div>
         </div>
             <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal fade" id="detail-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="detail-modalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
