Update: "검색 css 수정"

--- a/html/search.html
+++ b/html/search.html
@@ -19,19 +19,19 @@
                     <li class="li-style">
                         <div id="search-thing">조회기간</div>
                         <div class="date-style">
-                            <input type="date" class="date-form"> -
-                            <input type="date" class="date-form">
+                            <input id="prg-search" type="date" class="date-form"> -
+                            <input id="prg-search" type="date" class="date-form">
                         </div>
                     </li>
                     <li class="li-style">
                         <div id="search-thing">관련 시스템</div>
-                        <select class="select-style">
+                        <select id="prg-search" class="select-style">
                             <option>Value</option>
                         </select>
                     </li>
                     <li class="li-style">
                         <div id="search-thing">진행상태</div>
-                        <select class="select-style">
+                        <select id="prg-search" class="select-style">
                             <option>Value</option>
                         </select>
                     </li>
@@ -40,18 +40,18 @@
             <div class="searchBox2">
                 <ul class="ul-style">
                     <li class="li-style">
-                        <div id="search-thing">등록지 소속</div>
+                        <div id="search-thing">등록자 소속</div>
                         <input id="search-dept" type="text">
                     </li>
                     <li class="li-style">
                         <div id="search-thing">개발부서</div>
-                        <select class="select-style">
+                        <select id="prg-search" class="select-style">
                             <option>Value</option>
                         </select>
                     </li>
                     <li class="li-style">
                         <div id="search-thing">제목</div>
-                        <input type="text" id="input-style">
+                        <input id="prg-search" type="text">
                     </li>
                     <div class="btn-box">
                         <button id="search-btn" class="detail-btn search-btn">검색</button>
