Fix: "검색창 css 수정사항 적용"

--- a/html/search.html
+++ b/html/search.html
@@ -54,7 +54,7 @@
                         <input id="prg-search" type="text">
                     </li>
                     <div class="btn-box">
-                        <button id="search-btn" class="detail-btn search-btn">검색</button>
+                        <button id="search-btn" class="search-btn">검색</button>
                     </div>
                 </ul>
             </div>
