--- a/html/srList.html
+++ b/html/srList.html
@@ -67,26 +67,26 @@
         <!-- section -->
         <div id="section">
             <!-- 검색창 -->
-            <div id="search">
+            <div id="search-container">
                 <div id="search-box">
                     <div class="searchBox1">
                         <ul class="ul-style">
                             <li class="li-style">
                                 <div id="search-thing">조회기간</div>
                                 <div class="date-style">
-                                    <input type="date" class="date-form"> -
-                                    <input type="date" class="date-form">
+                                    <input id="prg-search" type="date" class="date-form"> -
+                                    <input id="prg-search" type="date" class="date-form">
                                 </div>
                             </li>
                             <li class="li-style">
                                 <div id="search-thing">관련 시스템</div>
-                                <select class="select-style">
+                                <select id="prg-search" class="select-style">
                                     <option>Value</option>
                                 </select>
                             </li>
                             <li class="li-style">
                                 <div id="search-thing">진행상태</div>
-                                <select class="select-style">
+                                <select id="prg-search" class="select-style">
                                     <option>Value</option>
                                 </select>
                             </li>
@@ -100,13 +100,13 @@
                             </li>
                             <li class="li-style">
                                 <div id="search-thing">개발부서</div>
-                                <select class="select-style">
+                                <select id="prg-search" class="select-style">
                                     <option>Value</option>
                                 </select>
                             </li>
                             <li class="li-style">
                                 <div id="search-thing">제목</div>
-                                <input type="text" id="input-style">
+                                <input id="prg-search" type="text">
                             </li>
                             <div class="btn-box">
                                 <button id="search-btn" class="search-btn">검색</button>
